--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "18.2.0",
     "react-datetime": "3.1.1",
     "react-dom": "18.2.0",
+    "react-player": "^2.10.1",
     "react-slick": "0.29.0",
     "styled-components": "5.3.5",
     "webpack": "5.73.0"
