--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "18.2.0",
     "react-player": "^2.10.1",
     "react-slick": "0.29.0",
+    "react-vertical-timeline-component": "^3.5.2",
     "styled-components": "5.3.5",
     "webpack": "5.73.0"
   }
