--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
   },
   "homepage": "https://demos.creative-tim.com/nextjs-material-kit",
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.4",
+    "@chakra-ui/react": "^2.2.4",
     "@material-ui/core": "4.12.4",
     "@material-ui/icons": "4.11.3",
+    "@usedapp/core": "^1.1.2",
     "classnames": "2.3.1",
     "moment": "2.29.4",
     "next": "12.2.2",
