--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "node-sass": "7.0.1",
     "nouislider": "15.6.0",
     "path": "0.12.7",
+    "prettier": "^2.7.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-datetime": "3.1.1",
