--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@material-ui/core": "4.12.4",
     "@material-ui/icons": "4.11.3",
     "@usedapp/core": "^1.1.2",
+    "axios": "^0.27.2",
     "classnames": "2.3.1",
     "moment": "2.29.4",
     "next": "12.2.2",
