--- a/package.json
+++ b/package.json
@@ -33,8 +33,6 @@
   },
   "homepage": "https://demos.creative-tim.com/nextjs-material-kit",
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.4",
-    "@chakra-ui/react": "^2.2.4",
     "@material-ui/core": "4.12.4",
     "@material-ui/icons": "4.11.3",
     "@usedapp/core": "^1.1.2",
@@ -50,9 +48,9 @@
     "path": "0.12.7",
     "prettier": "^2.7.1",
     "prop-types": "15.8.1",
-    "react": "18.2.0",
+    "react": "^17.0.2",
     "react-datetime": "3.1.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^17.0.2",
     "react-player": "^2.10.1",
     "react-slick": "0.29.0",
     "react-vertical-timeline-component": "^3.5.2",
