--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "https://demos.creative-tim.com/nextjs-material-kit",
   "dependencies": {
+    "@ethersproject/units": "^5.7.0",
     "@material-ui/core": "4.12.4",
     "@material-ui/icons": "4.11.3",
     "@usedapp/core": "^1.1.2",
