--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
   "dependencies": {
     "@ethersproject/units": "^5.7.0",
     "@material-ui/core": "4.12.4",
-    "@material-ui/icons": "4.11.3",
+    "@material-ui/icons": "^4.11.3",
     "@usedapp/core": "^1.1.2",
     "axios": "^0.27.2",
     "classnames": "2.3.1",
     "ethers": "^5.7.2",
+    "latest": "^0.2.0",
     "moment": "2.29.4",
     "next": "12.2.2",
     "next-compose-plugins": "2.2.1",
