--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@usedapp/core": "^1.1.2",
     "axios": "^0.27.2",
     "classnames": "2.3.1",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "ethers": "^5.7.2",
     "latest": "^0.2.0",
     "moment": "2.29.4",
@@ -58,6 +60,7 @@
     "react-slick": "0.29.0",
     "react-vertical-timeline-component": "^3.5.2",
     "styled-components": "5.3.5",
+    "swr": "^2.0.0",
     "webpack": "5.73.0"
   }
 }
