--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ethersproject/units": "^5.7.0",
     "@material-ui/core": "4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@next/bundle-analyzer": "^13.1.1",
     "@usedapp/core": "^1.1.2",
     "axios": "^0.27.2",
     "classnames": "2.3.1",
