--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "next-material-kit",
+  "name": "thetavibes",
   "version": "1.2.0",
-  "description": "NextJS Version of Material Kit React by Creative Tim (https://creative-tim.com)",
+  "description": "The home of the ThetaVibes NFT project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/creativetimofficial/nextjs-material-kit.git"
+    "url": "git+https://github.com/davinharding/guardian-of-theta-frontend"
   },
   "keywords": [
     "next",
@@ -26,12 +26,12 @@
     "material-kit-react",
     "next-material-kit"
   ],
-  "author": "Creative Tim",
+  "author": "Davin Harding",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/creativetimofficial/nextjs-material-kit/issues"
+    "url": "https://github.com/davinharding/guardian-of-theta-frontend/issues"
   },
-  "homepage": "https://demos.creative-tim.com/nextjs-material-kit",
+  "homepage": "thetavibes.io",
   "dependencies": {
     "@ethersproject/units": "^5.7.0",
     "@material-ui/core": "4.12.4",
