--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@usedapp/core": "^1.1.2",
     "axios": "^0.27.2",
     "classnames": "2.3.1",
+    "comma-number": "^2.1.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "ethers": "^5.7.2",
