added collect-got page and dependencies, debugging in progress

--- a/package.json
+++ b/package.json
@@ -43,8 +43,11 @@
     "comma-number": "^2.1.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "ethereumjs-util": "^7.1.5",
     "ethers": "^5.7.2",
+    "keccak256": "^1.0.6",
     "latest": "^0.2.0",
+    "merkletreejs": "^0.3.10",
     "moment": "2.29.4",
     "next": "12.2.2",
     "next-compose-plugins": "2.2.1",
