--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-player": "^2.10.1",
     "react-slick": "0.29.0",
     "react-vertical-timeline-component": "^3.5.2",
+    "sass": "^1.64.2",
     "styled-components": "5.3.5",
     "swr": "^2.0.0",
     "webpack": "5.73.0"
