--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "crons": [
       {
         "path": "/api/merkle-root-updater",
-        "schedule": "0 5 * * *"
+        "schedule": "0 */4 * * *"
       }
     ]
   }
