--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,4 @@
-{"projectId":"prj_KFmGNAKFggRQ2dkoUwivkWnnFsWD","orgId":"GBfm9BuNMI7fPcKHgxKCi5gS"}
+{
+  "projectId": "prj_KFmGNAKFggRQ2dkoUwivkWnnFsWD",
+  "orgId": "GBfm9BuNMI7fPcKHgxKCi5gS"
+}
